일부 리팩토링